--- a/training/training_13_wandb_full_from_scratch_bigger_images.ipynb
+++ b/training/training_13_wandb_full_from_scratch_bigger_images.ipynb
@@ -75,7 +75,7 @@
        "\n",
        "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://app.wandb.ai/jedrzej/gabon\" target=\"_blank\">https://app.wandb.ai/jedrzej/gabon</a><br/>\n",
-       "                Run page: <a href=\"https://app.wandb.ai/jedrzej/gabon/runs/3uckqhf0\" target=\"_blank\">https://app.wandb.ai/jedrzej/gabon/runs/3uckqhf0</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/jedrzej/gabon/runs/7jrpjk24\" target=\"_blank\">https://app.wandb.ai/jedrzej/gabon/runs/7jrpjk24</a><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "W&B Run: https://app.wandb.ai/jedrzej/gabon/runs/3uckqhf0"
+       "W&B Run: https://app.wandb.ai/jedrzej/gabon/runs/7jrpjk24"
       ]
      },
      "execution_count": 4,
@@ -287,8 +287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.56 s, sys: 724 ms, total: 8.29 s\n",
-      "Wall time: 6.43 s\n"
+      "CPU times: user 6.13 s, sys: 540 ms, total: 6.67 s\n",
+      "Wall time: 4.46 s\n"
      ]
     }
    ],
@@ -457,8 +457,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='0' class='' max='5', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      0.00% [0/5 00:00<00:00]\n",
+       "      <progress value='3' class='' max='5', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      60.00% [3/5 22:40:56<15:07:17]\n",
        "    </div>\n",
        "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -472,6 +472,27 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.341985</td>\n",
+       "      <td>0.868028</td>\n",
+       "      <td>0.761850</td>\n",
+       "      <td>7:27:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.284008</td>\n",
+       "      <td>0.854215</td>\n",
+       "      <td>0.765128</td>\n",
+       "      <td>7:32:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.303380</td>\n",
+       "      <td>0.844030</td>\n",
+       "      <td>0.769368</td>\n",
+       "      <td>7:41:21</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>\n",
        "\n",
@@ -488,8 +509,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='266' class='' max='18968', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      1.40% [266/18968 05:36<6:34:52 0.4229]\n",
+       "      <progress value='2659' class='' max='18968', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      14.02% [2659/18968 56:56<5:49:12 0.2759]\n",
        "    </div>\n",
        "    "
       ],
@@ -499,11 +520,27 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better model found at epoch 0 with valid_loss value: 0.8680283427238464.\n",
+      "Better model found at epoch 1 with valid_loss value: 0.8542152643203735.\n",
+      "Better model found at epoch 2 with valid_loss value: 0.84402996301651.\n"
+     ]
     }
    ],
    "source": [
     "%%time\n",
     "run_training(learn, \"stage3a-5epochs-576_768-rescaled\", initial_lr, n_epochs=n_epochs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warning! The computation broke at the above point. The model from epoch 2 (the third one) is stored in stage3a-intermediate_bestmodel.pth. But to save time I now go to unfreeze stage in notebook traini"
    ]
   },
   {
